# daysync_ai

./: .gitignore  README.md  app.py  db_helper.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
examples/: README.md  agent_vault.csv
examples/okf-bundle/: 3757ff96-6b4c-4bae-9535-f54dce11768d.md  635c7f0d-2aad-4077-8682-0a712df5412b.md  80f3c46d-c168-426e-b4c2-7f27c4e6dba4.md  8d1009c8-7083-4178-871a-8154bbb12b62.md  91edce15-252a-4812-8b08-bcfc2224fa99.md  cf7da6af-67ef-4947-934d-6527af7e31e2.md  f5cb6dbd-302c-475e-81ed-45e56d03d987.md  f6d5586d-2616-4bb5-8897-392380defb16.md  fd79a7e9-8db3-451a-b855-c7c4acfb4257.md  index.md  log.md
scripts/: build_examples.py
tests/: test_db.py
